Fix span spacing

--- a/_src/sass/partials/admin/_cs-ui.scss
+++ b/_src/sass/partials/admin/_cs-ui.scss
@@ -42,3 +42,9 @@
 		width:30%;
 	}
 }
+
+#pgProperties{
+	span{
+		display: inline-block;
+	}
+}
